crates/parser/src/snapshots/parser__tests__expression_return_logical_or_expression.snap
---
source: crates/parser/src/lib.rs
expression: ast
---
BinaryExpression:
  left:
    Identifier:
      name: a
      location:
        start:
          index: 0
          line: 1
          column: 1
        end:
          index: 1
          line: 1
          column: 2
  operator:
    operator: LogicalOr
    location:
      start:
        index: 2
        line: 1
        column: 3
      end:
        index: 4
        line: 1
        column: 5
  right:
    Identifier:
      name: b
      location:
        start:
          index: 5
          line: 1
          column: 6
        end:
          index: 6
          line: 1
          column: 7
  location:
    start:
      index: 0
      line: 1
      column: 1
    end:
      index: 6
      line: 1
      column: 7
