crates/parser/src/snapshots/parser__tests__expression_return_repeated_unary_expression.snap
---
source: crates/parser/src/lib.rs
expression: ast
---
UnaryExpression:
  operator:
    operator: LogicalNot
    location:
      start:
        index: 0
        line: 1
        column: 1
      end:
        index: 1
        line: 1
        column: 2
  operand:
    UnaryExpression:
      operator:
        operator: LogicalNot
        location:
          start:
            index: 1
            line: 1
            column: 2
          end:
            index: 2
            line: 1
            column: 3
      operand:
        BinaryExpression:
          left:
            IntegerLiteral:
              value: "0"
              location:
                start:
                  index: 2
                  line: 1
                  column: 3
                end:
                  index: 2
                  line: 1
                  column: 3
          operator:
            operator: Subtract
            location:
              start:
                index: 2
                line: 1
                column: 3
              end:
                index: 3
                line: 1
                column: 4
          right:
            BinaryExpression:
              left:
                IntegerLiteral:
                  value: "0"
                  location:
                    start:
                      index: 4
                      line: 1
                      column: 5
                    end:
                      index: 4
                      line: 1
                      column: 5
              operator:
                operator: Subtract
                location:
                  start:
                    index: 4
                    line: 1
                    column: 5
                  end:
                    index: 5
                    line: 1
                    column: 6
              right:
                UnaryExpression:
                  operator:
                    operator: LogicalNot
                    location:
                      start:
                        index: 5
                        line: 1
                        column: 6
                      end:
                        index: 6
                        line: 1
                        column: 7
                  operand:
                    UnaryExpression:
                      operator:
                        operator: LogicalNot
                        location:
                          start:
                            index: 8
                            line: 1
                            column: 9
                          end:
                            index: 9
                            line: 1
                            column: 10
                      operand:
                        Identifier:
                          name: a
                          location:
                            start:
                              index: 9
                              line: 1
                              column: 10
                            end:
                              index: 10
                              line: 1
                              column: 11
                      location:
                        start:
                          index: 8
                          line: 1
                          column: 9
                        end:
                          index: 10
                          line: 1
                          column: 11
                  location:
                    start:
                      index: 5
                      line: 1
                      column: 6
                    end:
                      index: 10
                      line: 1
                      column: 11
              location:
                start:
                  index: 4
                  line: 1
                  column: 5
                end:
                  index: 10
                  line: 1
                  column: 11
          location:
            start:
              index: 2
              line: 1
              column: 3
            end:
              index: 10
              line: 1
              column: 11
      location:
        start:
          index: 1
          line: 1
          column: 2
        end:
          index: 10
          line: 1
          column: 11
  location:
    start:
      index: 0
      line: 1
      column: 1
    end:
      index: 10
      line: 1
      column: 11
