crates/parser/src/snapshots/parser__tests__expression_returns_complicated_binary_expression.snap
---
source: crates/parser/src/lib.rs
expression: ast
---
BinaryExpression:
  left:
    BinaryExpression:
      left:
        IntegerLiteral:
          value: "100"
          location:
            start:
              index: 0
              line: 1
              column: 1
            end:
              index: 3
              line: 1
              column: 4
      operator:
        operator: Add
        location:
          start:
            index: 4
            line: 1
            column: 5
          end:
            index: 5
            line: 1
            column: 6
      right:
        BinaryExpression:
          left:
            IntegerLiteral:
              value: "2"
              location:
                start:
                  index: 6
                  line: 1
                  column: 7
                end:
                  index: 7
                  line: 1
                  column: 8
          operator:
            operator: Multiply
            location:
              start:
                index: 8
                line: 1
                column: 9
              end:
                index: 9
                line: 1
                column: 10
          right:
            Identifier:
              name: x
              location:
                start:
                  index: 10
                  line: 1
                  column: 11
                end:
                  index: 11
                  line: 1
                  column: 12
          location:
            start:
              index: 6
              line: 1
              column: 7
            end:
              index: 11
              line: 1
              column: 12
      location:
        start:
          index: 0
          line: 1
          column: 1
        end:
          index: 11
          line: 1
          column: 12
  operator:
    operator: Subtract
    location:
      start:
        index: 12
        line: 1
        column: 13
      end:
        index: 13
        line: 1
        column: 14
  right:
    BinaryExpression:
      left:
        Identifier:
          name: abc
          location:
            start:
              index: 15
              line: 1
              column: 16
            end:
              index: 18
              line: 1
              column: 19
      operator:
        operator: Add
        location:
          start:
            index: 19
            line: 1
            column: 20
          end:
            index: 20
            line: 1
            column: 21
      right:
        BinaryExpression:
          left:
            IntegerLiteral:
              value: "12"
              location:
                start:
                  index: 21
                  line: 1
                  column: 22
                end:
                  index: 23
                  line: 1
                  column: 24
          operator:
            operator: Divide
            location:
              start:
                index: 24
                line: 1
                column: 25
              end:
                index: 25
                line: 1
                column: 26
          right:
            IntegerLiteral:
              value: "2"
              location:
                start:
                  index: 26
                  line: 1
                  column: 27
                end:
                  index: 27
                  line: 1
                  column: 28
          location:
            start:
              index: 21
              line: 1
              column: 22
            end:
              index: 27
              line: 1
              column: 28
      location:
        start:
          index: 15
          line: 1
          column: 16
        end:
          index: 27
          line: 1
          column: 28
  location:
    start:
      index: 0
      line: 1
      column: 1
    end:
      index: 27
      line: 1
      column: 28
